2008-02-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html, NEWS:
   Add Indentation subsection under Editor section.


2008-01-31  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/autosave.c: Fixed a little typo
   (Thanks to Jeff Bailes for reporting)


2008-01-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c:
   Fix saving project session from a 2nd instance of Geany.
 * data/global.tags:
   Update for GTK+ 2.12.5.
   This also adds return type modifiers like const and *.
   Command used (on Fedora 8):
   'CFLAGS=`pkg-config --cflags gtk+-2.0` geany -g gtk-2.12.c.tags
   /usr/include/gtk-2.0/gtk/gtk.h'


2008-01-31  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/project.c:
   Open a new, empty file when closing a project and no session files
   are available or when opening a project without stored session files.
   Close all open files when opening projects.
 * src/printing.c: Fix losing line breaks when printing a file with LF
                   line endings and a non-Ascii character at the end of
                   a line.


2008-01-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Allow case sensitive replace when the replace string varies only
   in case.
 * src/keybindings.c, src/keybindings.h:
   Rename binding type KeyBinding.
 * src/search.c:
   Factor out get_search_flags() from Find, Replace dialog response
   code.


2008-01-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/pluginmacros.h, src/plugindata.h, plugins/*.c:
   Add new macros for plugin API functions that use a 'p_' prefix to
   prevent conflicts with other tags whilst keeping the same first word
   as core function names, and update plugins to use them.
   The old plugin macros are still available, but will be removed
   after the next release.
   Compiling with -DGEANY_DISABLE_DEPRECATED in CFLAGS will disable
   the old macros.