@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2008-01-11" />
+<meta name="date" content="2008-02-01" />
 <style type="text/css">
 
 /*
@@ -133,7 +133,7 @@ dt {
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2008-01-11</td></tr>
+<td>2008-02-01</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.13</td></tr>
 </tbody>
@@ -243,8 +243,8 @@ of this program, and also in the chapter <a class="reference" href="#gnu-general
 <li><a class="reference" href="#run-command" id="id69" name="id69">Run command</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#close-project" id="id70" name="id70">Close Project</a></li>
-<li><a class="reference" href="#open-project" id="id71" name="id71">Open Project</a></li>
+<li><a class="reference" href="#open-project" id="id70" name="id70">Open Project</a></li>
+<li><a class="reference" href="#close-project" id="id71" name="id71">Close Project</a></li>
 </ul>
 </li>
 <li><a class="reference" href="#build-system" id="id72" name="id72">Build system</a><ul>
@@ -1395,15 +1395,20 @@ bound to a key combination, and may not be available as a menu item.</p>
 <h2><a class="toc-backref" href="#id65" id="project-management" name="project-management">Project Management</a></h2>
 <p>Project Management is optional in Geany. Currently it can be used for:</p>
 <ul class="simple">
+<li>Storing and opening session files on a project basis.</li>
 <li>Running <em>Make</em> from the project's base directory.</li>
 <li>Setting a custom <em>Run</em> command specific to the project.</li>
 </ul>
+<p>A list of session files can be stored and opened with the project
+when the <em>Use project-based session files</em> preference is enabled,
+in the <em>Project</em> group of the <a class="reference" href="#preferences">Preferences</a> dialog.</p>
 <p>As long as a project is open, the Make and Run commands will use
 the project's settings, instead of the defaults. These will be used
 whichever document is currently displayed.</p>
 <p>The current project's settings are saved when it is closed, or when
 Geany is shutdown. When restarting Geany, the previously opened project
 file that was in use at the end of the last session will be reopened.</p>
+<p>Below are the commands used to create, modify, open and close projects.</p>
 <div class="section">
 <h3><a class="toc-backref" href="#id66" id="new-project" name="new-project">New Project</a></h3>
 <p>To create a new project, fill in the <em>Name</em> field. By default this
@@ -1443,13 +1448,18 @@ any command-line arguments.</p>
 </div>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id70" id="close-project" name="close-project">Close Project</a></h3>
-<p>Project file settings are saved when the project is closed.</p>
+<h3><a class="toc-backref" href="#id70" id="open-project" name="open-project">Open Project</a></h3>
+<p>The Open command displays a standard file chooser, starting in
+<tt class="docutils literal"><span class="pre">~/projects</span></tt>. Choose a project file named with the <tt class="docutils literal"><span class="pre">.geany</span></tt>
+extension.</p>
+<p>When project session support is enabled, Geany will close the currently
+open files and open the session files associated with the project.</p>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id71" id="open-project" name="open-project">Open Project</a></h3>
-<p>The Open command displays a standard file chooser, starting in
-<tt class="docutils literal"><span class="pre">~/projects</span></tt>.</p>
+<h3><a class="toc-backref" href="#id71" id="close-project" name="close-project">Close Project</a></h3>
+<p>Project file settings are saved when the project is closed.</p>
+<p>When project session support is enabled, Geany will close the project
+session files and open any previously closed default session files.</p>
 </div>
 </div>
 <div class="section">
@@ -3257,7 +3267,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2008-02-01 13:14 UTC.
+Generated on: 2008-02-01 13:36 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
